<resources>
    <string name="app_name">Contacts</string>
    <string name="liste_de_contacts">Liste de contacts</string>
    <string name="email">Email</string>
    <string name="fullname">FullName</string>
    <string name="cellphone">CellPhone</string>
    <string name="workphone">WorkPhone</string>
    <string name="prenom">Prenom</string>
    <string name="nom_de_famille">Nom de famille</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="profile">Profile</string>
    <string name="cellulaire">(xxx) xxx-xxxx</string>
    <string name="travaille">(xxx) xxx-xxxx</string>
    <string name="telephone">Téléphone</string>
    <string name="defaut">Défaut</string>
    <string name="confimer">Confimer</string>
    <string name="annuler">Annuler</string>
</resources>