<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#B5B3B3"
    android:orientation="vertical"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B6B5B5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/fullname"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/email"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cellphone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:gravity="center|start"
                            android:padding="15dp"
                            android:text="@string/cellphone"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/workphone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:gravity="center|start"
                            android:padding="15dp"
                            android:text="@string/workphone"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".8"
                        android:orientation="vertical"
                        android:paddingLeft="15dp">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".9">

                            <RadioButton
                                android:id="@+id/cellDefault"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight=".9"
                                android:enabled="false"
                                android:gravity="center" />

                            <RadioButton
                                android:id="@+id/workDefault"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight=".9"
                                android:enabled="false"
                                android:gravity="center" />
                        </RadioGroup>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>